# the-poet-and-the-sage

./: .env.sample  AGENT.md  LICENSE  README.md  SETUP.md  TODO  TODO.md  config.toml  requirements.txt
context_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
critique_agent/: pyproject.toml
critique_agent/app/: __main__.py  agent.py  agent_executor.py
host_agent/: pyproject.toml
host_agent/host/: agent.py
poet_agent/: pyproject.toml
poet_agent/app/: __main__.py  agent.py  agent_executor.py  config.py
poet_sage/: __init__.py  host.py  runner.py
poet_sage/agents/: context_agent.py  critique_agent.py  lc_base.py  poet_agent.py  research_agent.py  web_browsing_agent.py
poet_sage/data/: Gautama_Buddha.json  Partition_of_Bengal_(1905).json  Partition_of_India.json  Swaraj.json
poet_sage/prompts/: context_prompt.txt  critique_prompt.txt  poet_prompt.txt  research_prompt.txt
research_agent/: __main__.py  agent.py  agent_executor.py  config.py  pyproject.toml
src/: main.py
src/context_agent/: context_agent.py
src/critique_agent/: critique_agent.py
src/poet_agent/: poet_agent.py
src/research_agent/: research_agent.py
src/web_browsing_agent/: web_browsing_agent.py
wikipedia_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
