[project]
name = "context-agent"
version = "0.1.0"
description = "Extracts symbolic and emotional essence from structured research, setting the stage for poetry."
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.5",
    "google-adk>=1.2.1",
    "python-dotenv",
    "uvicorn",
    "tomli"
] 

[tool]
model_name = "gemini-2.0-flash"