[project]
name = "research-agent"
version = "0.1.0"
description = "Synthesizes Wikipedia content into summaries, timelines, and themes for poetic transformation."
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.5",
    "google-adk>=1.2.1",
    "python-dotenv",
    "uvicorn",
    "tomli"
] 

[tool]
model_name = "gemini-2.0-flash"