[project]
name = "wikipedia-agent"
version = "0.1.0"
description = "A friendly agent to help you check Wikipedia for topics."
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.5",
    "crewai[tools]>=0.126.0",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "google-generativeai",
    "wikipedia"
] 

[tool]
model_name = "gemini/gemini-2.0-flash"